--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
 
       # ランナーのシェルを使用して単一のコマンドを実行します
       - name: 1行のスクリプトを実行
-        run: echo Hello, world!
+        run: ls -la
 
       # ランナーのシェルを使用して一連のコマンドを実行します
       - name: 複数行のスクリプトを実行
