--- a/.github/workflows/system-info.yml
+++ b/.github/workflows/system-info.yml
@@ -29,7 +29,7 @@ jobs:
           elif [ "${{ runner.os }}" == "macOS" ]; then
             sw_vers
           elif [ "${{ runner.os }}" == "Windows" ]; then
-            powershell -Command "Get-ComputerInfo | Select-Object WindowsProductName, WindowsVersion, OsArchitecture"
+            command pwsh.exe -NoProfile -Command 'Get-ComputerInfo | Select-Object WindowsProductName, WindowsVersion, OsArchitecture'
           fi
       - name: CPU アーキテクチャを表示
         shell: bash
@@ -38,7 +38,7 @@ jobs:
           if [ "${{ runner.os }}" == "Linux" ] || [ "${{ runner.os }}" == "macOS" ]; then
             uname -m
           elif [ "${{ runner.os }}" == "Windows" ]; then
-            powershell -Command 'Write-Host $env:PROCESSOR_ARCHITECTURE'
+            command pwsh.exe -NoProfile -Command 'Write-Host $env:PROCESSOR_ARCHITECTURE'
           fi
       - name: メモリ情報を表示
         shell: bash
@@ -47,9 +47,12 @@ jobs:
           if [ "${{ runner.os }}" == "Linux" ]; then
             free -h
           elif [ "${{ runner.os }}" == "macOS" ]; then
-            top -l 1 | grep PhysMem
+            # macOS の top コマンドは出力形式が変わりやすいため、より安定した方法を推奨
+            # sysctl hw.memsize | awk '{print "Physical Memory: " $2 / 1024 / 1024 " MB"}'
+            # vm_stat
+            top -l 1 | grep PhysMem # 元のコマンドを維持
           elif [ "${{ runner.os }}" == "Windows" ]; then
-            powershell -Command "Get-CimInstance Win32_OperatingSystem | Select-Object TotalVisibleMemorySize, FreePhysicalMemory"
+            command pwsh.exe -NoProfile -Command 'Get-CimInstance Win32_OperatingSystem | Select-Object TotalVisibleMemorySize, FreePhysicalMemory'
           fi
       - name: ストレージ空き容量を表示
         shell: bash
@@ -58,7 +61,9 @@ jobs:
           if [ "${{ runner.os }}" == "Linux" ] || [ "${{ runner.os }}" == "macOS" ]; then
             df -h
           elif [ "${{ runner.os }}" == "Windows" ]; then
-            powershell -Command "Get-Volume | Select-Object DriveLetter, FileSystemLabel, @{Name='Size(GB)';Expression={[math]::Round($_.Size / 1GB,2)}}, @{Name='FreeSpace(GB)';Expression={[math]::Round($_.SizeRemaining / 1GB,2)}}"
+            # PowerShellコマンド内のハッシュテーブルのキー名はダブルクォートで囲むのが一般的ですが、
+            # 全体をシングルクォートで囲んでいるため、PowerShellが正しく解釈します。
+            command pwsh.exe -NoProfile -Command 'Get-Volume | Select-Object DriveLetter, FileSystemLabel, @{Name="Size(GB)";Expression={[math]::Round($_.Size / 1GB,2)}}, @{Name="FreeSpace(GB)";Expression={[math]::Round($_.SizeRemaining / 1GB,2)}}'
           fi
       - name: 現在のディレクトリとファイル一覧を表示 (pwd & ls -la)
         shell: bash
